@@ -1,4 +1,8 @@
-/* Automatic gain control. */
+/* Automatic gain control. 
+
+October 2011 program of the month:
+http://ahay.org/rsflog/index.php?/archives/271-Program-of-the-month-sfagc.html
+*/
 /*
   Copyright (C) 2004 University of Texas at Austin
 
