@@ -1,4 +1,8 @@
-/* First derivative with a maximally linear FIR differentiator. */
+/* First derivative with a maximally linear FIR differentiator. 
+
+May 2012 program of the month:
+http://ahay.org/rsflog/index.php?/archives/290-Program-of-the-month-sfderiv.html
+*/
 /*
   Copyright (C) 2004 University of Texas at Austin
 
