@@ -1,6 +1,9 @@
 /* FFT transform on extra axis.
 
 Input and output are complex data. The input is padded by factor pad.
+
+July 2012 program of the month:
+http://ahay.org/rsflog/index.php?/archives/298-Program-of-the-month-sffft3.html
 */
 /*
   Copyright (C) 2004 University of Texas at Austin
