@@ -1,4 +1,8 @@
-/* Add random noise to the data.*/
+/* Add random noise to the data.
+
+July 2011 program of the month:
+http://ahay.org/rsflog/index.php?/archives/262-Program-of-the-month-sfnoise.html
+*/
 /*
   Copyright (C) 2004 University of Texas at Austin
   
