@@ -1,4 +1,8 @@
-/* Frequency spectra. */
+/* Frequency spectra. 
+
+March 2012 program of the month:
+http://ahay.org/rsflog/index.php?/archives/285-Program-of-the-month-sfspectra.html
+*/
 /*
   Copyright (C) 2004 University of Texas at Austin
 
