@@ -1,4 +1,8 @@
-/* Half-order integration or differentiation. */
+/* Half-order integration or differentiation. 
+
+December 2012 program of the month:
+http://ahay.org/rsflog/index.php?/archives/317-Program-of-the-month-sfhalfint.html
+*/
 /*
   Copyright (C) 2004 University of Texas at Austin
 
