@@ -1,6 +1,9 @@
 /* 3-D dip estimation by plane wave destruction. 
 
 The output is dimensionless (stepout in time measured in time samples). 
+
+June 2012 program of the month:
+http://ahay.org/rsflog/index.php?/archives/295-Program-of-the-month-sfdip.html
 */
 /*
   Copyright (C) 2004 University of Texas at Austin
