@@ -3,10 +3,10 @@ sys.path.append('../../framework')
 import bldutil
 
 progs = '''
-isaac0 isaac1 isaac2 isaac3
+isaac0 isaac1 isaac2 
 '''
 
-# kirr33 kirm3 rtmpar shuffle
+# isaac3
 
 try:  # distributed version
     Import('env root pkgdir bindir')
